--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.metalrain.crimsim.android"
+    package="com.metalrain.stocksimulator.android"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -8,7 +8,7 @@
 
 
     <application
-        android:name=".StockSimulator"
+        android:name="com.metalrain.stocksimulator.android.StockSimulator"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
@@ -28,7 +28,7 @@
             </intent-filter>
         </activity>
         -->
-        <activity android:name=".activities.StockSimulatorActivity"
+        <activity android:name="com.metalrain.stocksimulator.android.activities.StockSimulatorActivity"
             android:allowBackup="true"
             android:icon="@drawable/ic_launcher"
             android:label="@string/app_name"
